--- a/lib/app_component.css
+++ b/lib/app_component.css
@@ -1,5 +1,16 @@
-span {
-    font-size: 300%;
-    padding: 0 1rem;
-    background: linear-gradient(to bottom right, lightsalmon, orangered) ;
+.counter-box {
+    font-size: 2.5vw;
+    /* padding: 0 1rem; */
+    /* background: linear-gradient(to bottom right, lightsalmon, orangered); */
+    font-weight: bolder;
+    background-color: orangered;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.animal-count {
+  display: inline-block;
+  vertical-align: top;
+  margin-bottom: 2%;
+  width: 22.5%;
 }
